# godot-netpacket

./: Cargo.toml  README.md
crates/godot-netpacket/: Cargo.toml
crates/godot-netpacket-macros/: Cargo.toml
crates/godot-netpacket-macros/src/netpacket/: deserialize.rs  serialize.rs
crates/godot-netpacket/src/: lib.rs  netpacket.rs
crates/godot-netpacket/src/netpacket/: box_type.rs  other.rs
crates/godot_netpacket/: Cargo.toml
crates/godot_netpacket/src/: netpacket.rs
crates/godot_netpacket/src/netpacket/: composite.rs  number.rs  transform.rs  vector.rs
crates/godot_netpacket_macros/: Cargo.toml
crates/godot_netpacket_macros/src/: lib.rs  netpacket.rs
crates/godot_netpacket_macros/src/netpacket/: const_size.rs
