[workspace]
resolver = "2"
members = ["crates/godot-netpacket", "crates/godot-netpacket-macros"]

[workspace.package]
edition = "2024"

authors = ["Olivier Schyns"]
license = "MIT"
keywords = ["godot", "networking", "serialization"]
repository = "https://github.com/oschijns/godot-netpacket"
categories = ["game-engines"]
description = "Library for building network packets for Godot"
