[workspace]
resolver = "2"
members = ["crates/godot_netpacket", "crates/godot_netpacket_macros"]

[workspace.package]
edition = "2024"
version = "0.0.3"

authors = ["Olivier Schyns"]
license = "MIT"
keywords = ["godot", "networking", "serialization"]
repository = "https://github.com/oschijns/godot-netpacket"
categories = ["game-engines"]
description = "Library for building network packets for Godot"
