[package]
name = "godot-netpacket"
version = "0.0.1"

authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
godot = "0.3"
thiserror = "2"
godot-netpacket-macros = "0.0.1"

[dev-dependencies]
#gd-rehearse = { git = "https://github.com/StatisMike/gd-rehearse.git" }
