[package]
name = "godot-netpacket"
version = "0.0.2"

authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
categories.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib"]

[features]

# Allow this library to be used as a standalone
standalone = []


[dependencies]
godot = "0.4"
thiserror = "2"
godot-netpacket-macros = "0.0.1"
