[package]
name = "godot_netpacket"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
categories.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib"]

[features]

# Allow this library to be used as a standalone
standalone = []


[dependencies]
godot = "0.4"
thiserror = "2"
godot_netpacket_macros = { path = "../godot_netpacket_macros" }
